--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,34 @@
+version: '3.8'
+
+services:
+  paymybuddy-db:
+    image: mysql:8.4
+    container_name: paymybuddy-db
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: db_paymybuddy
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./initdb:/docker-entrypoint-initdb.d
+    ports:
+      - "3306:3306"
+
+  paymybuddy-backend:
+    build:
+            context: .
+    container_name: paymybuddy-backend
+    restart: always
+    depends_on:
+      - paymybuddy-db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://paymybuddy-db:3306/db_paymybuddy
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: password
+    ports:
+      - "8080:8080"
+    expose:
+      - 8080
+volumes:
+  db_data:
 
